<resources>
    <string name="app_name">إستراحة الطفولة</string>
    <string name="drawingstitle">مسابقة الرسم</string>
    <string name="readingtitle">مسابقة قِصَصْ و شِعْرْ</string>
    <string name="checksubmissions">رسومات أصدقائي</string>
    <string name="checksubmissions2">قِصَصْ و شِعْرْ أصدقائي</string>
    <string name="checksubmissions3">أطباق أصدقائي</string>
    <string name="submit">الدخول</string>
    <string name="drawingmaintext">في هذه المسابقة عليك برسم أي شيء المشاركة برسمك! بإمكان أصدقائك تقييم رسمك! يمكنك محاولة رسم الصورة بالأسفل أو رسم أي شيء تريد! إضغظ على زر: رسومات أصدقائي للإطّلاع على رسومات أصدقائك و تقييمها!</string>
    <string name="fish">سمكة</string>
    <string name="star">نجْمة</string>
    <string name="rate">تقييم</string>
    <string name="no_votes_yet">لم يُقيِّمْها أحدٌ بعْد</string>
    <string name="back_to_submissions">إرْجع</string>
    <string name="submit_mine">أُريد المُشاركة</string>
    <string name="tofola">طفولة</string>
    <string name="enter">أدخل</string>
    <string name="your_name">الإسم الكامل</string>
    <string name="areyousure">إضغط مرة ثانية لتأكيد الخروج</string>
    <string name="illtry">سأحاول رسمها</string>
    <string name="drawwatiwant">أنا أختار الرسم</string>
    <string name="camera">الكاميرا</string>
    <string name="galerie">الصُّوَرْ</string>
    <string name="upload">أرْسِلْ</string>
    <string name="upload2">أرْسِلْ من دون صورة</string>
    <string name="joinwithdrawing">المشاركة بِرسم</string>
    <string name="youdrawing">رَسْمُكَ</string>
    <string name="backk">إرْجع</string>
    <string name="join">شارك</string>
    <string name="drawing">الرسم</string>
    <string name="percent">%</string>
    <string name="hunna">100</string>
    <string name="previous">Go to previous drawing</string>
    <string name="next">Go to next drawing</string>
    <string name="peoplevoted">أشخاص</string>
    <string name="votedfrom">مقيّم من</string>
    <string name="twovoted">مقيّمة من شخصين</string>
    <string name="onevoted">مقيّمة من شخص واحد</string>
    <string name="chakhs">شخص</string>
    <string name="red_arrow">red arrow</string>
    <string name="changer">رسم جديد</string>
    <string name="noone">لم يشارك أحد في المسابقة بعد، كن أول من يشارك!</string>
    <string name="lemmein">أريد المشاركة!</string>
    <string name="joinagain">إعادة المشاركة</string>
    <string name="already">تم المشاركة بهذه الصورة من قبل!</string>
    <string name="choosefirst">إختر صورة أولا!</string>
    <string name="gggg">مساحة الهاتف غير كافية أو لست متصل بالإنترنت</string>
    <string name="donee">تم دخول المسابقة!</string>
    <string name="choooosenew">إختر صورة جديدة!</string>
    <string name="ggef">الرجاء كتابة إسمكم الكامل</string>
    <string name="doyouhaveinternet">هل أنت متَّصِل بالإنترنت؟</string>
    <string name="connecting">جاري الإتِّصال بالإنترنت..</string>
    <string name="readingexplanation">في هذه المسابقة بإمكانك كتابة شعر، كتابة قصة أو تلخيص كتاب قد قرأته و عرضه على زملائك لتقييمه!</string>
    <string name="joinwithreading">المشاركة بقِصَصْك أو شِعْرِك</string>
    <string name="yourresume">ملخَّصك</string>
    <string name="booknam">العنوان</string>
    <string name="takepicofbook">أخذ صورة للكِتاب</string>
    <string name="confirmed">تأكيد</string>
    <string name="pleasewritatitle">يرجى كتابة عنوان</string>
    <string name="pleasewriteresume">يرجى كتابة ملخص</string>
    <string name="changepicture">تغيير الصورة</string>
    <string name="showboook">إظهار صورة الكتاب</string>
    <string name="clickonimagetohide">إظغط على الصورة لإخفائها</string>
    <string name="titlee">العنوان:</string>
    <string name="nasss">النص:</string>
    <string name="cookingcomp">مسابقة الطبخ</string>
    <string name="cookingmaintext">في هذه المسابقة بإمكانك طبخ طبق ثم عرضه على أصدقائك لتقييمه!</string>
    <string name="joinwithplate">المشاركة بطبق</string>
    <string name="creditter">الهيئة الوطنية لحماية و ترقية الطفولة</string>
    <string name="organization">ه.و.ح.ت.ط</string>
    <string name="comeonobn">بمرافقة أحد الوالدين</string>
    <string name="gg">إفتح صفحة قبول الصلاحية</string>
    <string name="gotta">عليك بقبول الصلاحية من أجل الدخول</string>
    <string name="gotta2">(Permissions)</string>
    <string name="gcg">قمت بتفعيل الصلاحية</string>
    <string name="dpoo">يرجى تفعيل الصلاحية</string>
    <string name="rahaaa">إستراحة الدار البيضاء</string>
    <string name="plsdraw">يرجى الرسم أولا</string>
</resources>
