<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbackground">

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/logofromtop">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="@dimen/logosize"
                android:layout_height="@dimen/logosize"
                android:id="@+id/logo"
                android:layout_marginBottom="@dimen/betweenlogontitle"
                android:contentDescription="@string/app_name" />
            <TextView
                android:gravity="center"
                android:textSize="@dimen/tofolaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tofola"
                android:textColor="@color/uncoolred"
                android:id="@+id/tofola"/>
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_marginBottom="@dimen/betweenlogontitle"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="@dimen/logosize"
                android:layout_height="@dimen/logosize"
                android:id="@+id/logo2"
                android:contentDescription="@string/app_name" />
            <TextView
                android:gravity="center"
                android:textSize="@dimen/tofolaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/organization"
                android:textColor="@color/uncoolred"
                android:id="@+id/organization"/>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="37sp"
                android:textColor="@color/black"
                android:id="@+id/tofolaa"
                android:text="@string/rahaaa"
                android:gravity="center" />
            <Button
                android:layout_marginStart="@dimen/mainbuttonsides"
                android:layout_marginEnd="@dimen/mainbuttonsides"
                android:textSize="@dimen/goodtextsize"
                android:background="@drawable/buttons"
                android:text="@string/drawingstitle"
                android:layout_marginBottom="@dimen/mainbetweenbuttons"
                android:onClick="drawingsClicked"
                android:textAllCaps="false"
                android:id="@+id/drawing"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <Button
                android:layout_marginStart="@dimen/mainbuttonsides"
                android:layout_marginEnd="@dimen/mainbuttonsides"
                android:textSize="@dimen/goodtextsize"
                android:layout_marginBottom="@dimen/mainbetweenbuttons"
                android:background="@drawable/buttons"
                android:text="@string/readingtitle"
                android:onClick="readingClicked"
                android:textAllCaps="false"
                android:id="@+id/reading"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <Button
                android:visibility="gone"
                android:layout_marginStart="@dimen/mainbuttonsides"
                android:layout_marginEnd="@dimen/mainbuttonsides"
                android:textSize="@dimen/goodtextsize"
                android:background="@drawable/buttons"
                android:text="@string/cookingcomp"
                android:onClick="cookingClicked"
                android:textAllCaps="false"
                android:id="@+id/cooking"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/parental"
                android:textColor="@color/black"
                android:text="@string/comeonobn"
                android:textSize="19sp"
                android:gravity="center_horizontal" />
        </LinearLayout>

    <TextView
        android:visibility="gone"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/creditter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/creditter"
        android:layout_marginBottom="3dp"/>

    <FrameLayout
        android:id="@+id/loadingscreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="@color/loadingscreencolor">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/connecting"
                android:textSize="50sp"
                android:gravity="center"
                android:textColor="@color/bluuuuuue"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/connecting"
                android:layout_weight="1"/>
        </LinearLayout>
        <ProgressBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</FrameLayout>