<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/main"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/submissionitemm"
    android:orientation="horizontal">
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight=".65"
        android:weightSum="2">
        <TextView
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/title"/>
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/ratingholder"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView

                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/starone"
                    android:layout_width="@dimen/starsizedepth"
                    android:layout_height="@dimen/starsizedepth"
                    android:contentDescription="@string/star" />
                <ImageView

                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/startwo"
                    android:layout_width="@dimen/starsizedepth"
                    android:layout_height="@dimen/starsizedepth"
                    android:contentDescription="@string/star"  />
                <ImageView

                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/starthree"
                    android:layout_width="@dimen/starsizedepth"
                    android:layout_height="@dimen/starsizedepth"
                    android:contentDescription="@string/star"  />
                <ImageView
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/starfour"
                    android:layout_width="@dimen/starsizedepth"
                    android:layout_height="@dimen/starsizedepth"
                    android:contentDescription="@string/star"  />
                <ImageView
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/starfive"
                    android:layout_width="@dimen/starsizedepth"
                    android:layout_height="@dimen/starsizedepth"
                    android:contentDescription="@string/star"  />
            </LinearLayout>

            <TextView
                android:clickable="true"
                android:focusable="true"
                android:visibility="invisible"
                android:id="@+id/novotesyet"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/no_votes_yet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/rate"
        android:text="@string/rate"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:background="@drawable/submissionbutton"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".35"/>

</LinearLayout>